fix: remove overflow auto in paging area container

--- a/frappe/public/scss/list.scss
+++ b/frappe/public/scss/list.scss
@@ -179,7 +179,6 @@
 }
 
 .list-paging-area, .footnote-area {
-	overflow: auto;
 	border-top: 1px sol var(--gray-100);
 }
 
